Bug 124361 - Useless button "Add/Import" in "paragraphe style" dialog
Summary: Useless button "Add/Import" in "paragraphe style" dialog
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: iOS Editor (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: Other iOS
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2019-03-27 14:27 UTC by Nicolas Christener
Modified: 2019-04-02 09:38 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Printscreen showing the "add/import" button (366.58 KB, image/png)
2019-03-27 14:28 UTC, Nicolas Christener
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas Christener 2019-03-27 14:27:51 UTC
Description:
The iOS app has some buttons in "tunneled dialogs" that don't make sense. Maybe they could be removed?

Steps to Reproduce:
1. Open the "paragraphe style" dialog in the iOS app
2. Open the tab "Area" > sub tab "Bitmap"
3. Press the button "Add/Import"

Actual Results:
Nothing happens

Expected Results:
I think there is no correct result the button should probably be removed in the iOS app. Maybe showing the (native) file dialog could be an option.


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 Nicolas Christener 2019-03-27 14:28:13 UTC
Created attachment 150316 [details]
Printscreen showing the "add/import" button
Comment 2 Commit Notification 2019-04-02 09:26:21 UTC
Andras Timar committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/bac831c8f5fb5c50ddddfb2458498fb9564c127a%5E%21

tdf#124361 hide Add / Import button in Online

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 How can I remove my account? 2019-04-02 09:38:24 UTC
Fixed in master and cp-6.0, thanks Andras. Resolving.