tdf#124361 hide Add / Import button in Online

Change-Id: I6c8fb30fc1b8e0e6467a428f65838084fc08ca1e